--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,14 @@ add_executable (SQLid
     "src/clients/SyncServer.h" 
     "src/clients/Base.h" 
     "src/exceptions/Exceptions.h"
- "src/parser/CommandsParser.h" "src/parser/Commands.h" "src/data_base/CommandsExecutor.h")
+    "src/parser/CommandsParser.h" 
+    "src/parser/Commands.h" 
+    "src/data_base/CommandsExecutor.h"
+"include/SQLid_API.h")
 
 # Директории include
-target_include_directories(SQLid PRIVATE src)
+target_include_directories(SQLid PRIVATE src 
+    PUBLIC include )
 
 # Линковка с Boost
 target_link_libraries(SQLid PRIVATE 
